k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
<<<<<<< HEAD
  name: go-app
  labels:
    app: go-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: go-app
  type: NodePort
=======
  name: go-web-app-lb
spec:
  type: LoadBalancer
  selector:
    app: go-web-app
  ports:
    - port: 80
      targetPort: 8080
>>>>>>> 8fdd827 (updated)
